--- a/coding.html
+++ b/coding.html
@@ -1,11 +1,10 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DC-Coding</title>
-    <link rel="stylesheet" href="{% static 'css/coding.css' %}">
+    <link rel="stylesheet" href="static/css/coding.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -19,19 +18,19 @@
          <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="{% url 'index' %}">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="{% url 'topper' %}">Topper Bot</a>
+                    <a href="topper.html">Topper Bot</a>
                 </li>
                 <li>
-                    <a href="{% url 'coding' %}" class="active">Coding Subjects</a>
+                    <a href="coding.html" class="active">Coding Subjects</a>
                 </li>
                 <li>
-                    <a href="{% url 'theory' %}">Theory Subjects</a>
+                    <a href="theory.html">Theory Subjects</a>
                 </li>
                 <li>
-                    <a href="{% url 'timer' %}">Study timer</a>
+                    <a href="timer.html">Study timer</a>
                 </li>
             </ul>
          </nav>
@@ -48,41 +47,41 @@
         <div class="row first ">
             <div class="col-md-3 col-sm-8 mt-3 pt-3"> 
             <div class="card " style="width: 18rem;">
-                <img src="{% static 'images/java.jpg' %}" class="card-img-top" alt="..." height="200">
+                <img src="static/images/java.jpg" class="card-img-top" alt="..." height="200">
                 <div class="card-body">
                   <h5 class="card-title text-center">JAVA</h5>
                   <p class="card-text">Includes all Units and Important questions and model answers.</p>
-                  <a href="{% url 'particular' 'Java' %}" class="btn btn-primary text-center">Click to Access</a>
+                  <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
                 </div>
               </div>
               </div>
             <div class="col-md-3 col-sm-8 mt-3 pt-3"> 
             <div class="card" style="width: 18rem;">
-                <img src="{% static 'images/javascript.jpg' %}" class="card-img-top" alt="..." height="200">
+                <img src="static/images/javascript.jpg" class="card-img-top" alt="..." height="200">
                 <div class="card-body">
                   <h5 class="card-title text-center">JAVASCRIPT</h5>
                   <p class="card-text">Includes all Units and Important questions and model answers.</p>
-                  <a href="{% url 'particular' 'Javascript' %}" class="btn btn-primary text-center">Click to Access</a>
+                  <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
                 </div>
               </div>
               </div>
             <div class="col-md-3 col-sm-8 mt-3 pt-3"> 
             <div class="card" style="width: 18rem;">
-                <img src="{% static 'images/python.jpg' %}" class="card-img-top" alt="..." height="200">
+                <img src="static/images/python.jpg" class="card-img-top" alt="..." height="200">
                 <div class="card-body">
                   <h5 class="card-title text-center">PYTHON</h5>
                   <p class="card-text">Includes all Units and Important questions and model answers.</p>
-                  <a href="{% url 'particular' 'python' %}" class="btn btn-primary text-center">Click to Access</a>
+                  <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
                 </div>
               </div>
               </div>
             <div class="col-md-3 col-sm-8 mt-3 pt-3"> 
             <div class="card" style="width: 18rem;">
-                <img src="{% static 'images/c++.jpg' %}" class="card-img-top" alt="..." height="200">
+                <img src="static/images/c++.jpg" class="card-img-top" alt="..." height="200">
                 <div class="card-body">
                   <h5 class="card-title text-center">C++</h5>
                   <p class="card-text">Includes all Units and Important questions and model answers.</p>
-                  <a href="{% url 'particular' 'c++' %}" class="btn btn-primary text-center">Click to Access</a>
+                  <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
                 </div>
               </div>
               </div>
