--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>DC-Home</title>
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="static/css/style.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
 </head>
@@ -22,19 +21,19 @@
 		<nav class="nav-bar">
 			<ul>
 				<li>
-					<a href="{% url 'index' %}" class="active">Home</a>
+					<a href="index.html" class="active">Home</a>
 				</li>
 				<li>
-					<a href="{% url 'topper' %}">Topper Bot</a>
+					<a href="topper.html">Topper Bot</a>
 				</li>
 				<li>
-					<a href="{% url 'coding' %}">Coding Subjects</a>
+					<a href="coding.html">Coding Subjects</a>
 				</li>
 				<li>
-					<a href="{% url 'theory' %}">Theory Subjects</a>
+					<a href="theory.html">Theory Subjects</a>
 				</li>
 				<li>
-					<a href="{% url 'timer' %}">Study timer</a>
+					<a href="timer.html">Study timer</a>
 				</li>
 			</ul>
 		</nav>
@@ -51,13 +50,13 @@
 		data-bs-interval="2000">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="{% static 'images/carousel-3.jpg' %}" class="d-block w-100" height="450px" alt="...">
+				<img src="static/images/carousel-3.jpg" class="d-block w-100" height="450px" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="{% static 'images/carousel-2.jpg' %}" class="d-block w-100" height="450px" alt="...">
+				<img src="static/images/carousel-2.jpg" class="d-block w-100" height="450px" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="{% static 'images/carousel-1.jpg' %}" class="d-block w-100" height="450px" alt="...">
+				<img src="static/images/carousel-1.jpg" class="d-block w-100" height="450px" alt="...">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
