--- a/particular.html
+++ b/particular.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DC-Coding</title>
-  <link rel="stylesheet" href="{% static 'css/particular.css' %}">
+  <link rel="stylesheet" href="static/css/particular.css">
 </head>
 
 <body>
@@ -19,11 +18,11 @@
     </div>
     <nav class="nav-bar">
       <ul>
-        <li><a href="{% url 'index' %}" class="active">Home</a></li>
-        <li><a href="{% url 'topper' %}">Topper Bot</a></li>
-        <li><a href="{% url 'coding' %}">Coding Subjects</a></li>
-        <li><a href="{% url 'theory' %}">Theory Subjects</a></li>
-        <li><a href="{% url 'timer' %}">Study timer</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="topper.html">Topper Bot</a></li>
+        <li><a href="coding.html">Coding Subjects</a></li>
+        <li><a href="theory.html">Theory Subjects</a></li>
+        <li><a href="timer.html">Study timer</a></li>
       </ul>
     </nav>
   </header>
