--- a/theory.html
+++ b/theory.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DC-Theory</title>
-  <link rel="stylesheet" href="{% static 'css/coding.css' %}">
+  <link rel="stylesheet" href="static/css/coding.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
@@ -21,19 +20,19 @@
     <nav class="nav-bar">
       <ul>
         <li>
-          <a href="{% url 'index' %}">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="{% url 'topper' %}">Topper Bot</a>
+          <a href="topper.html">Topper Bot</a>
         </li>
         <li>
-          <a href="{% url 'coding' %}">Coding Subjects</a>
+          <a href="coding.html">Coding Subjects</a>
         </li>
         <li>
-          <a href="{% url 'theory' %}" class="active">Theory Subjects</a>
+          <a href="theory.html" class="active">Theory Subjects</a>
         </li>
         <li>
-          <a href="{% url 'timer' %}">Study timer</a>
+          <a href="timer.html">Study timer</a>
         </li>
       </ul>
     </nav>
@@ -50,42 +49,42 @@
     <div class="row first">
       <div class="col-md-3 col-sm-8 mt-3 pt-3">
         <div class="card" style="width: 18rem;">
-          <img src="{% static 'images/testing.jpg' %}" class="card-img-top" alt="..." height="200">
+          <img src="static/images/testing.jpg" class="card-img-top" alt="..." height="200">
           <div class="card-body">
             <h5 class="card-title text-center">SOFTWARE TESTING</h5>
             <p class="card-text">Includes all Units and Important questions and model answers.</p>
-            <a href="{% url 'particular' 'software testing' %}" class="btn btn-primary text-center">Click to Access</a>
+            <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
           </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-8 mt-3 pt-3">
         <div class="card" style="width: 18rem;">
-          <img src="{% static 'images/osy.png' %}" class="card-img-top" alt="..." height="200">
+          <img src="static/images/osy.png" class="card-img-top" alt="..." height="200">
           <div class="card-body">
             <h5 class="card-title text-center">OPERATING SYSTEM</h5>
             <p class="card-text">Includes all Units and Important questions and model answers.</p>
-            <a href="{% url 'particular' 'operating system' %}" class="btn btn-primary text-center">Click to Access</a>
+            <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
           </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-8 mt-3 pt-3">
         <div class="card" style="width: 18rem;">
-          <img src="{% static 'images/it.jpg' %}" class="card-img-top" alt="..." height="200">
+          <img src="static/images/it.jpg" class="card-img-top" alt="..." height="200">
           <div class="card-body">
             <h5 class="card-title text-center">EMERGING TRENDS IN IT</h5>
             <p class="card-text">Includes all Units and Important questions and model answers.</p>
-            <a href="{% url 'particular' 'emerging trends in it' %}" class="btn btn-primary text-center">Click to Access</a>
+            <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
           </div>
         </div>
       </div>
       <div class="col-md-3 col-sm-8 mt-3 pt-3">
         <div class="card" style="width: 18rem;">
-          <img src="{% static 'images/dcc.jpg' %}" class="card-img-top" alt="..." height="200">
+          <img src="static/images/dcc.jpg" class="card-img-top" alt="..." height="200">
           <div class="card-body">
             <h5 class="card-title text-center">DCC</h5>
             <p class="card-text">Includes all Units and Important questions and model answers.</p>
 
-            <a href="{% url 'particular' 'dcc' %}" class="btn btn-primary text-center">Click to Access</a>
+            <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
           </div>
         </div>
       </div>
