--- a/timer.html
+++ b/timer.html
@@ -1,11 +1,10 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DC-Timer</title>
-    <link rel="stylesheet" href="{% static 'css/timer.css' %}">
+    <link rel="stylesheet" href="static/css/timer.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -19,19 +18,19 @@
          <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="{% url 'index' %}">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="{% url 'topper' %}">Topper Bot</a>
+                    <a href="topper.html">Topper Bot</a>
                 </li>
                 <li>
-                    <a href="{% url 'coding' %}">Coding Subjects</a>
+                    <a href="coding.html">Coding Subjects</a>
                 </li>
                 <li>
-                    <a href="{% url 'theory' %}">Theory Subjects</a>
+                    <a href="theory.html">Theory Subjects</a>
                 </li>
                 <li>
-                    <a href="{% url 'timer' %}" class="active">Study timer</a>
+                    <a href="timer.html" class="active">Study timer</a>
                 </li>
             </ul>
          </nav>
