--- a/topper.html
+++ b/topper.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DC-Topper</title>
-    <link rel="stylesheet" href="{% static 'css/topper.css' %}">
+    <link rel="stylesheet" href="static/css/topper.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 
@@ -21,19 +20,19 @@
         <nav class="nav-bar">
             <ul>
                 <li>
-                    <a href="{% url 'index' %}">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="{% url 'topper' %}" class="active">Topper Bot</a>
+                    <a href="topper.html" class="active">Topper Bot</a>
                 </li>
                 <li>
-                    <a href="{% url 'coding' %}">Coding Subjects</a>
+                    <a href="coding.html">Coding Subjects</a>
                 </li>
                 <li>
-                    <a href="{% url 'theory' %}">Theory Subjects</a>
+                    <a href="theory.html">Theory Subjects</a>
                 </li>
                 <li>
-                    <a href="{% url 'timer' %}">Study timer</a>
+                    <a href="timer.html">Study timer</a>
                 </li>
             </ul>
         </nav>
@@ -66,7 +65,7 @@
                     <div class="col whatsapp">
 
                         <a target="_blank" aria-label="Chat on WhatsApp" href="https://wa.me/9326469356"> <img
-                                height="50px" width="180px" alt="Chat on WhatsApp" src="{% static 'images/WhatsAppButtonGreenLarge.png' %}" />
+                                height="50px" width="180px" alt="Chat on WhatsApp" src="static/images/WhatsAppButtonGreenLarge.png" />
                         </a>
 
                     </div>
@@ -80,7 +79,7 @@
                     <div class="col whatsapp">
 
                         <a target="_blank" aria-label="Chat on WhatsApp" href="https://wa.me/9930260037"> <img
-                                height="50px" width="180px" alt="Chat on WhatsApp" src="{% static 'images/WhatsAppButtonGreenLarge.png' %}" />
+                                height="50px" width="180px" alt="Chat on WhatsApp" src="static/images/WhatsAppButtonGreenLarge.png" />
                         </a>
 
                     </div>
@@ -94,7 +93,7 @@
                     <div class="col whatsapp">
 
                         <a target="_blank" aria-label="Chat on WhatsApp" href="https://wa.me/9702752006"> <img
-                                height="50px" width="180px" alt="Chat on WhatsApp" src="{% static 'images/WhatsAppButtonGreenLarge.png' %}" />
+                                height="50px" width="180px" alt="Chat on WhatsApp" src="static/images/WhatsAppButtonGreenLarge.png" />
                         </a>
 
                     </div>
