GitHub Pages: data-driven particular.html, add data/subjects.json, update links with ?subject=..., add .nojekyll

--- a/coding.html
+++ b/coding.html
@@ -51,7 +51,7 @@
                 <div class="card-body">
                   <h5 class="card-title text-center">JAVA</h5>
                   <p class="card-text">Includes all Units and Important questions and model answers.</p>
-                  <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
+                  <a href="particular.html?subject=java" class="btn btn-primary text-center">Click to Access</a>
                 </div>
               </div>
               </div>
@@ -61,7 +61,7 @@
                 <div class="card-body">
                   <h5 class="card-title text-center">JAVASCRIPT</h5>
                   <p class="card-text">Includes all Units and Important questions and model answers.</p>
-                  <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
+                  <a href="particular.html?subject=javascript" class="btn btn-primary text-center">Click to Access</a>
                 </div>
               </div>
               </div>
@@ -71,7 +71,7 @@
                 <div class="card-body">
                   <h5 class="card-title text-center">PYTHON</h5>
                   <p class="card-text">Includes all Units and Important questions and model answers.</p>
-                  <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
+                  <a href="particular.html?subject=python" class="btn btn-primary text-center">Click to Access</a>
                 </div>
               </div>
               </div>
@@ -81,7 +81,7 @@
                 <div class="card-body">
                   <h5 class="card-title text-center">C++</h5>
                   <p class="card-text">Includes all Units and Important questions and model answers.</p>
-                  <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
+                  <a href="particular.html?subject=c%2B%2B" class="btn btn-primary text-center">Click to Access</a>
                 </div>
               </div>
               </div>
