--- a/theory.html
+++ b/theory.html
@@ -53,7 +53,7 @@
           <div class="card-body">
             <h5 class="card-title text-center">SOFTWARE TESTING</h5>
             <p class="card-text">Includes all Units and Important questions and model answers.</p>
-            <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
+            <a href="particular.html?subject=software%20testing" class="btn btn-primary text-center">Click to Access</a>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
           <div class="card-body">
             <h5 class="card-title text-center">OPERATING SYSTEM</h5>
             <p class="card-text">Includes all Units and Important questions and model answers.</p>
-            <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
+            <a href="particular.html?subject=operating%20system" class="btn btn-primary text-center">Click to Access</a>
           </div>
         </div>
       </div>
@@ -73,7 +73,7 @@
           <div class="card-body">
             <h5 class="card-title text-center">EMERGING TRENDS IN IT</h5>
             <p class="card-text">Includes all Units and Important questions and model answers.</p>
-            <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
+            <a href="particular.html?subject=emerging%20trends%20in%20it" class="btn btn-primary text-center">Click to Access</a>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
             <h5 class="card-title text-center">DCC</h5>
             <p class="card-text">Includes all Units and Important questions and model answers.</p>
 
-            <a href="particular.html" class="btn btn-primary text-center">Click to Access</a>
+            <a href="particular.html?subject=dcc" class="btn btn-primary text-center">Click to Access</a>
           </div>
         </div>
       </div>
