Static fix: strip unrendered Django template tags on GitHub Pages via tiny JS (no layout change)

--- a/particular.html
+++ b/particular.html
@@ -61,6 +61,21 @@
   </ol>
 
   
+<script>
+  (function() {
+    try {
+      var html = document.body.innerHTML;
+      var cleaned = html
+        .replace(/\{%\s*[\s\S]*?\s*%}/g, '')
+        .replace(/\{\{\s*[\s\S]*?\s*}}/g, '');
+      if (cleaned !== html) {
+        document.body.innerHTML = cleaned;
+      }
+    } catch (e) {
+      // no-op
+    }
+  })();
+</script>
 </body>
 
 </html>
