--- a/particular.html
+++ b/particular.html
@@ -88,17 +88,7 @@
 <!-- Static Units section for GitHub Pages -->
 <div class="container" style="margin: 2rem auto; max-width: 1000px; padding: 0 1rem;">
   <h2 style="color: #ddd; margin-bottom: 1rem;">Units and PPTs</h2>
-  <div id="subject-buttons" style="margin-bottom: 1rem; display: flex; flex-wrap: wrap; gap: .5rem;"></div>
-  <table id="subject-table" class="table table-dark table-striped" style="width: 100%; display: none;">
-    <thead>
-      <tr>
-        <th style="width: 15%">Unit</th>
-        <th>Topic / PPT</th>
-      </tr>
-    </thead>
-    <tbody id="subject-tbody"></tbody>
-  </table>
-  <div id="no-content" style="color:#aaa;">Select a subject above to view available PPTs.</div>
+  <div id="subjects-root"></div>
 </div>
 
 <script>
@@ -151,47 +141,46 @@
       ]
     };
 
-    const btnWrap = document.getElementById('subject-buttons');
-    const table = document.getElementById('subject-table');
-    const tbody = document.getElementById('subject-tbody');
-    const empty = document.getElementById('no-content');
-
-    function render(subject) {
-      const items = SUBJECTS[subject] || [];
-      if (!items.length) {
-        table.style.display = 'none';
-        empty.style.display = '';
-        empty.textContent = 'No PPTs available for ' + subject + ' yet.';
-        return;
-      }
-      tbody.innerHTML = '';
-      items.forEach(it => {
-        const tr = document.createElement('tr');
-        const td1 = document.createElement('td');
-        const td2 = document.createElement('td');
-        td1.textContent = it.unit_name || '';
-        const a = document.createElement('a');
-        a.href = it.unit_file;
-        a.textContent = it.unit_topic || 'Open PPT';
-        a.target = '_blank';
-        td2.appendChild(a);
-        tr.appendChild(td1);
-        tr.appendChild(td2);
-        tbody.appendChild(tr);
+    function renderAll() {
+      const root = document.getElementById('subjects-root');
+      root.innerHTML = '';
+      Object.keys(SUBJECTS).forEach(subject => {
+        const h3 = document.createElement('h3');
+        h3.textContent = subject;
+        h3.style.color = '#eee';
+        h3.style.marginTop = '1.25rem';
+        const table = document.createElement('table');
+        table.className = 'table table-dark table-striped';
+        table.style.width = '100%';
+        const thead = document.createElement('thead');
+        thead.innerHTML = '<tr><th style="width:15%">Unit</th><th>Topic / PPT</th></tr>';
+        const tbody = document.createElement('tbody');
+        (SUBJECTS[subject] || []).forEach(it => {
+          const tr = document.createElement('tr');
+          const td1 = document.createElement('td');
+          const td2 = document.createElement('td');
+          td1.textContent = it.unit_name || '';
+          const a = document.createElement('a');
+          a.href = it.unit_file;
+          a.textContent = it.unit_topic || 'Open PPT';
+          a.target = '_blank';
+          td2.appendChild(a);
+          tr.appendChild(td1);
+          tr.appendChild(td2);
+          tbody.appendChild(tr);
+        });
+        table.appendChild(thead);
+        table.appendChild(tbody);
+        root.appendChild(h3);
+        root.appendChild(table);
       });
-      empty.style.display = 'none';
-      table.style.display = '';
     }
 
-    // Build subject buttons
-    Object.keys(SUBJECTS).forEach(name => {
-      const b = document.createElement('button');
-      b.textContent = name;
-      b.className = 'btn btn-sm btn-primary';
-      b.style.marginRight = '.25rem';
-      b.onclick = () => render(name);
-      btnWrap.appendChild(b);
-    });
+    if (document.readyState === 'loading') {
+      document.addEventListener('DOMContentLoaded', renderAll);
+    } else {
+      renderAll();
+    }
   })();
 </script>
 
